styles.css
* {
  padding: 0;
  margin: 0;
}

body {
  position: relative;
  background-color: #555555;
}

@font-face {
  font-family: Anton;
  src: url(Anton-Regular.ttf);
}

img {
  width: auto;
  height: 100vh;
}

.imagediv {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
  position: relative;
}

#imagecredit {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  color: white;
}

#imagecredit > a {
  color: white;
  text-decoration: underline;
}

#banner {
  position: absolute;
  top: 30%;
  left: 0%;
  z-index: 1;
  width: min(100%, 779px);
  opacity: 50%;
  color: white;
  background-color: black;
}

#banner > p {
  font-family: Anton;
  font-size: 8rem;
  font-weight: 50;
  text-align: center;
}

svg {
  width: 100%;
  height: 90%;
}

#g-text, #l-text {
  font-family: Tahoma, sans-serif;
  font-size: 0.65rem;
}

.forsvg {
  margin-top: -2rem;
}

body {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

div.actualpage {
  background-color: #cccccc;
  display: flex;
  flex-direction: row;
  width: clamp(850px, 80%, 1600px);
  margin-top: 5%;
  margin-bottom: 8%;
  z-index: 1;
}

.rightsidediv {
  width: max(50%, 585px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.textdiv {
  font-family: Helvetica, sans-serif;
  font-size: 2rem;
  font-weight: bold;
  background-color: burlywood;
  flex-grow: 1;
  max-width: 100%;
  padding-left: 2.3rem;
  padding-right: 6vw;
  margin-top: 10vw;
}

.formdiv {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
  background-color: white;
}

div.firstname {
  background-color: #aaaaaa;
}

div.lastname {
  background-color: #aaaaaa;
}

div.email {
  background-color: #aaaaaa;
}

div.phoneno {
  background-color: #aaaaaa;
}

div.pword1 {
  background-color: #aaaaaa;
}

div.pword2 {
  background-color: #aaaaaa;
}

.lowerdiv {
  display: flex;
  flex-direction: column;
  background-color: grey;
  justify-content: space-around;
  gap: 2rem;
  padding-left: 2.5rem;
  padding-bottom: 8rem;
}

li > div {
  position: relative;
}

.divforh2 {
  display: flex;
  background-color: purple;
}

h2 {
  padding-left: 0.2rem;
}

li + li {
  display: flex;
  flex-direction: row;
}

a.login {
  padding-left: 1rem;
}

label {
  position: absolute;
  font-size: 1.3rem;
  top: 1.5rem;
  left: 2.6rem;
}

ul {
  list-style-type: none;
}

input {
  width: 15rem;
  height: 2rem;
  outline: 1px solid brown;
  border-radius: 1px;
}

form {
  display: flex;
  flex-direction: column;
}

.accountbutton {
  font-size: 1.5rem;
  padding: 0.8rem 1rem;
  background-color: burlywood;
  border: 5px solid #040404;
  border-radius: 2px;
  box-shadow: 2px 2px black;
}

.alreadyp {
  font-size: 1.3rem;
}

.login {
  font-size: 1.5rem;
}

li > div {
 padding: 3rem 2.5rem;
}

label > strong > span {
  position: absolute;
  color: red;
  font-family: Verdana, sans-serif;
  top: 0px;
  right: -0.75rem;
}

input.pwordinput:invalid {
  outline: 2px solid red;
  border-radius: 2px;
}

input:focus {
  outline: 2px solid blue;
  border-radius: 2px;
  box-shadow: 5px 5px 4px 3px #090909;
}

input:focus:invalid {
  outline: 2px solid red;
  border-radius: 2px;
}

input:focus:placeholder-shown {
  outline: 2px solid blue;
  border-radius: 2px;
  box-shadow: 5px 5px 4px 3px #090909;
}

input.pwordinput:invalid {
  outline: 2px solid red;
  border-radius: 2px;
}

